[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://img/hudredbar.png" type="Texture" id=2]
[ext_resource path="res://img/hudgreenbar.png" type="Texture" id=3]
[ext_resource path="res://img/foe_pink.png" type="Texture" id=4]
[ext_resource path="res://sounds/punch.ogg" type="AudioStream" id=5]
[ext_resource path="res://fonts/Nanami.fnt" type="BitmapFont" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource/name = "hit"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -30, -80 ), Vector2( -30, -120 ) ]
}

[node name="Enemy" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="HP" type="TextureProgress" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.2, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -70.0
margin/right = 280.0
margin/bottom = -38.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 2 )
texture/over = null
texture/progress = ExtResource( 3 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 4 )

[node name="Hit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Area2D" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.5, 0, 0, 2.5, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="PBody" type="CollisionShape2D" parent="Area2D"]

transform/scale = Vector2( 2.5, 2.5 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Area2D1" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 20, 0, 0, 20, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="BArea" type="CollisionShape2D" parent="Area2D1"]

transform/scale = Vector2( 20, 20 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Damage" type="Label" parent="."]

editor/display_folded = true
visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -30.0
margin/top = -120.0
margin/right = 30.0
margin/bottom = -94.0
custom_fonts/font = ExtResource( 6 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Anim" type="AnimationPlayer" parent="Damage"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="Damage"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="area_enter" from="Area2D" to="." method="_on_Area2D_area_enter"]

[connection signal="body_enter" from="Area2D1" to="." method="_on_Area2D1_body_enter"]

[connection signal="body_exit" from="Area2D1" to="." method="_on_Area2D1_body_exit"]


